# SGAgent-v1.5

./: .gitignore  LICENSE  README.md  fixer.py  localizer.py  pyproject.toml  settings.py  suggester.py  test.py
agents/: __init__.py  base.py  callbacks.py  context.py  fixer.py  localizer.py  messages.py  suggester.py  test.py
dataset/: verified.parquet
kg/: construct_tags.py  main.py  utils.py
models/: __init__.py  agent_types.py  entities.py
prompts/: common.py  fixer.py  localizer.py  suggester.py
retriever/: __init__.py  ckg_retriever.py  converters.py
tests/: test_agent_info_sharing.py  test_coordinator.py  test_coordinator_routing.py  test_dataset.py  test_dynamic_tools.py  test_dynamic_tools2.py  test_l_f_r.py  test_localizer_ability.py  test_localizer_fixer.py  test_localizer_output.py  test_message_sharing.py  test_publisher_tools.py  test_shared_history.py  test_tools_registry.py
tools/: __init__.py  fixer_tools.py  registry.py  retriever_tools.py  sequential_thinking_tool.py
utils/: __init__.py  apply_check.py  decorators.py  dock.py  logger.py  logging.py  metrics.py
